--- a/lotus/framework-res/res/values/arrays.xml
+++ b/lotus/framework-res/res/values/arrays.xml
@@ -573,10 +573,10 @@
         <item>12</item>
     </integer-array>
     <string-array name="config_tether_usb_regexs">
-        <item>usb0</item>
+        <item>rndis0</item>
     </string-array>
     <string-array name="config_tether_wifi_regexs">
-        <item>wlan1</item>
+        <item>wlan0</item>
     </string-array>
     <array name="config_tether_wimax_regexs" />
     <string-array name="config_tether_bluetooth_regexs">
@@ -640,9 +640,9 @@
         <item>20000</item>
     </integer-array>
     <integer-array name="config_autoBrightnessLcdBacklightValues">
-        <item>20</item>
-        <item>68</item>
-        <item>96</item>
+        <item>10</item>
+        <item>48</item>
+        <item>86</item>
         <item>103</item>
         <item>115</item>
         <item>130</item>
