--- a/pepper/overlay/framework-res/res/values-de/plurals.xml
+++ b/pepper/overlay/framework-res/res/values-de/plurals.xml
@@ -68,12 +68,12 @@
         <item quantity="one">morgen</item>
     </plurals>
     <plurals name="wifi_available">
-        <item quantity="other">Verfügbare Wlan-Netzwerk öffnen</item>
-        <item quantity="one">Verfügbares Wlan-Netzwerk öffnen</item>
+        <item quantity="other">Verfügbare WLan-Netzwerk öffnen</item>
+        <item quantity="one">Verfügbares WLan-Netzwerk öffnen</item>
     </plurals>
     <plurals name="wifi_available_detailed">
-        <item quantity="other">Verfügbare Wlan-Netzwerk öffnen</item>
-        <item quantity="one">Verfügbares Wlan-Netzwerk öffnen</item>
+        <item quantity="other">Verfügbare WLan-Netzwerk öffnen</item>
+        <item quantity="one">Verfügbares WLan-Netzwerk öffnen</item>
     </plurals>
     <plurals name="matches_found">
         <item quantity="other">%1$d von %2$d</item>
